Update tmux config with catppuccin theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,11 +11,7 @@ set -g history-limit 50000
 # set -g prefix C-s
 
 # Use vim key bindings
-setw -g mode-keys vi
-
-# Setup 'v' to begin selection as in Vim
-# bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# setw -g mode-keys vi
 
 # Update default binding of `Enter` to also use copy-pipe
 # unbind -t vi-copy Enter
@@ -23,9 +19,6 @@ setw -g mode-keys vi
 
 # Bind ']' to use pbpaste
 # bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-
-# enable utf8 in the status bar
-# set -g status-utf8 on
 
 # Select panes with vim movement keys - prefix + h
 bind h select-pane -L
@@ -43,65 +36,64 @@ bind -r L resize-pane -R 5
 bind | split-window -h
 bind _ split-window -v
 
-# easy reload of this file
-# bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# Easy reload of this file
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # Improve colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
-# Status bar color
-set -g status-style fg=white,bg=black
-
-setw -g window-status-style fg=cyan,bg=default,dim
-
-setw -g window-status-current-style fg=white,bg=red,bright
-
-# active pane
-set -g pane-border-style fg=green,bg=black
-set -g pane-active-border-style fg=white,bg=yellow
-
-# command line
-set -g message-style fg=white,bg=black,bright
-
-# status bar content
-set -g status-left-length 40
-#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-left "#[fg=green]Session: #S"
-set -g status-right "#[fg=cyan]%d %b %R"
-set -g status-justify centre
-
-# enable mouse
+# Enable mouse
 set -g mouse on
-# set -g mode-mouse on
-# set -g mouse-resize-pane on
-# set -g mouse-select-pane on
-# set -g mouse-select-window on
 
-# prev and next window
+# Prev and next window
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-# cycle sessions using prefix + (
+# Cycle sessions using prefix + (
 bind -r ( switch-client -p
 bind -r ) switch-client -n
 
-# make window and pane index accessible for humans
+# Make window and pane index accessible for humans
 set -g base-index 1
 setw -g pane-base-index 1
 
-# renumber windows sequentially after closing any of them
+# Renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
 unbind x
 bind x run ". ~/.tmux/zoom"
 
-# clear the pane (same as Cmd-k) - meta key is set to be the option key
-bind -n M-k send-keys -R \; clear-history
+# Clear the pane (same as Cmd-k) - meta key is set to be the option key
+# bind -n M-k send-keys -R \; clear-history
 
 # TMUX plugin manager - List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'catppuccin/tmux'
+
+set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
+set -g @catppuccin_window_status_style "rounded"
+# set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_number "#I"
+
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_current_number "#I"
+
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+# set -agF status-right "#{E:@catppuccin_status_battery}"
+# set -agF status-right "#{E:@catppuccin_status_cpu}"
+# set -ag status-right "#{E:@catppuccin_status_uptime}"
+
+# Move the status bar to the top position
+set-option -g status-position top
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
