--- a/tmux.conf
+++ b/tmux.conf
@@ -74,7 +74,7 @@ set -g @plugin 'catppuccin/tmux'
 
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 set -g @catppuccin_window_status_style "rounded"
-# set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_number_position "right"
 
 set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_number "#I"
@@ -94,6 +94,9 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 
 # Move the status bar to the top position
 set-option -g status-position top
+
+# Center the windows in the status bar
+set -g status-justify centre
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
