--- a/tmux.conf
+++ b/tmux.conf
@@ -64,21 +64,16 @@ bind x run ". ~/.tmux/zoom"
 # Clear the pane (same as Cmd-k) - meta key is set to be the option key
 # bind -n M-k send-keys -R \; clear-history
 
-# TMUX plugin manager - List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'catppuccin/tmux'
+# Display pane titles
+# set -g pane-border-status top
+# set -g pane-border-format " [ ###P #T ] "
+# set -g pane-border-format " [#P: #{pane_current_command}] "
 
 set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "right"
-
 set -g @catppuccin_window_text "#W"
-set -g @catppuccin_window_number "#I"
-
 set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_current_number "#I"
-
 
 set -g status-right-length 100
 set -g status-left-length 100
@@ -98,6 +93,13 @@ set -g status-justify centre
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 
+# TPM Plugins
+# <prefix + I> to install/update plugins
+set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'jaclu/tmux-menus'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-
