--- a/tmux.conf
+++ b/tmux.conf
@@ -94,12 +94,18 @@ set -g status-justify centre
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
 
 # TPM Plugins
+=============
 # <prefix + I> to install/update plugins
 set -g @plugin 'tmux-plugins/tpm'
+
 # set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'catppuccin/tmux'
 # set -g @plugin 'jaclu/tmux-menus'
+
+set -g @plugin 'catppuccin/tmux'
+
+# Save: <prefix> + Ctrl-s
+# Restore: <prefix> + Ctrl-r
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
