Move tmux status bar back to the bottom

--- a/tmux.conf
+++ b/tmux.conf
@@ -85,7 +85,7 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 # set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 # Move the status bar to the top position
-set-option -g status-position top
+# set-option -g status-position top
 
 # Center the windows in the status bar
 set -g status-justify centre
