Display tmux session title on window

--- a/tmux.conf
+++ b/tmux.conf
@@ -65,6 +65,9 @@ bind x run ". ~/.tmux/zoom"
 # bind -n M-k send-keys -R \; clear-history
 
 # Display pane titles
+set-option -g set-titles on
+set-option -g set-titles-string "#{session_name} – #{host}"
+
 # set -g pane-border-status top
 # set -g pane-border-format " [ ###P #T ] "
 # set -g pane-border-format " [#P: #{pane_current_command}] "
