--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,12 @@ bind -r ) switch-client -n
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Toggle between the two most recently used panes with Prefix + l
+bind-key l last-pane
+
+# Toggle between the two most recently used windows with Prefix + L
+bind-key L last-window
+
 # Renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
