--- a/tmux.conf
+++ b/tmux.conf
@@ -61,6 +61,12 @@ bind-key l last-pane
 # Toggle between the two most recently used windows with Prefix + L
 bind-key L last-window
 
+# Swap current window with the one to the left
+bind-key -r < swap-window -d -t -1
+
+# Swap current window with the one to the right
+bind-key -r > swap-window -d -t +1
+
 # Renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
