Fix new install issues - remove asdf in favor of mise - better support for installing brews on new setup - remove cf2_secrets from dotfiles

--- a/bash/config
+++ b/bash/config
@@ -14,9 +14,9 @@ source ~/.git-completion.bash
 # Enable vi mode for better command-line navigation
 set -o vi 
 
-# Enable ASDF
-. $HOME/.asdf/asdf.sh
-. $HOME/.asdf/completions/asdf.bash
+# Mise (runtime version manager)
+export PATH="$HOME/.local/bin:$PATH"
+eval "$(mise activate bash)"
 
 # Set up fzf key bindings and fuzzy completion
 eval "$(fzf --bash)" 
