Setup tmux theme catppuccin

--- a/tmux.conf
+++ b/tmux.conf
@@ -84,14 +84,14 @@ set -g @catppuccin_window_number_position "right"
 set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_current_text "#W"
 
+# Load catppuccin BEFORE using its status variables
+run ~/.tmux/plugins/tmux/catppuccin.tmux
+
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_session}"
-# set -agF status-right "#{E:@catppuccin_status_battery}"
-# set -agF status-right "#{E:@catppuccin_status_cpu}"
-# set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 # Move the status bar to the top position
 # set-option -g status-position top
