. f Add tmux popup for ostt speech-to-text with claude workflow

--- a/tmux.conf
+++ b/tmux.conf
@@ -67,6 +67,9 @@ set -g renumber-windows on
 unbind x
 bind x run ". ~/.tmux/zoom"
 
+# Voice input popup (ostt speech-to-text)
+bind v display-popup -E -w 60% -h 40% "ostt && tmux set-buffer \"$(pbpaste)\" && tmux paste-buffer"
+
 # Clear the pane (same as Cmd-k) - meta key is set to be the option key
 # bind -n M-k send-keys -R \; clear-history
 
